src/main/resources/prometheus/thanos/thanos/thanos-compact.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: thanos-compact
  name: thanos-compact
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: thanos-compact
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: thanos-compact
  name: thanos-compact
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos-compact
  serviceName: thanos-compact
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos-compact
    spec:
      containers:
        - args:
            - compact
            - --wait
            - --objstore.config-file=/etc/thanos/objectstorage.yaml
            - --data-dir=/var/thanos/compact
            - --debug.accept-malformed-index
            - --log.level=debug
            - --retention.resolution-raw=90d
            - --retention.resolution-5m=180d
            - --retention.resolution-1h=360d
          image: quay.io/thanos/thanos:v0.11.0
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /-/healthy
              port: 10902
              scheme: HTTP
            periodSeconds: 30
          name: thanos-compact
          ports:
            - containerPort: 10902
              name: http
          readinessProbe:
            failureThreshold: 20
            httpGet:
              path: /-/ready
              port: 10902
              scheme: HTTP
            periodSeconds: 5
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /var/thanos/compact
              name: data
              readOnly: false
            - name: thanos-objectstorage
              subPath: objectstorage.yaml
              mountPath: /etc/thanos/objectstorage.yaml
      terminationGracePeriodSeconds: 120
      volumes:
        - name: thanos-objectstorage
          secret:
            secretName: thanos-objectstorage
  volumeClaimTemplates:
    - metadata:
        labels:
          app.kubernetes.io/name: thanos-compact
        name: data
        namespace: monitoring
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
        storageClassName: alicloud-nas-fs
