src/main/resources/prometheus/thanos/thanos/thanos-query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-ingress
  namespace: monitoring
spec:
  rules:
    - host: thanos-query-lml.izaodao.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: thanos-query
                port:
                  name: http
